--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -72,7 +72,8 @@ long_query_time = 1
 #       other settings you may need to change.
 #server-id              = 1
 #log_bin                        = /log/mysql-bin.log
-expire_logs_days        = 10
+#expire_logs_days        = 10 - deprecated!!!
+binlog_expire_logs_seconds = 864000
 max_binlog_size         = 100M
 #binlog_do_db           = include_database_name
 #binlog_ignore_db       = include_database_name
@@ -84,7 +85,8 @@ innodb_buffer_pool_size = 2048M
 innodb_file_per_table = 1
 #skip_name_resolve
 innodb_buffer_pool_instances    = 2
-innodb_log_file_size            = 256M
+#innodb_log_file_size            = 256M - deprecated!!!
+innodb_redo_log_capacity=536870912
 
 #
 # * Security Features
