--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -71,7 +71,7 @@ long_query_time = 1
 # note: if you are setting up a replication slave, see README.Debian about
 #       other settings you may need to change.
 #server-id              = 1
-#log_bin                        = /log/mysql-bin.log
+log_bin                        = /log/mysql-bin.log
 #expire_logs_days        = 10 - deprecated!!!
 binlog_expire_logs_seconds = 864000
 max_binlog_size         = 100M
