--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -56,7 +56,7 @@ max_heap_table_size     = 48M
 myisam-recover-options  = BACKUP
 max_connections         = 400
 
-#general_log_file        = /log/mysql.log
+general_log_file        = /var/log/mysql.log
 #general_log             = 1
 #
 # Error log - should be very few entries.
@@ -71,7 +71,7 @@ long_query_time = 1
 # note: if you are setting up a replication slave, see README.Debian about
 #       other settings you may need to change.
 #server-id              = 1
-log_bin                        = /log/mysql-bin.log
+log_bin                        = /var/log/mysql-bin.log
 #expire_logs_days        = 10 - deprecated!!!
 binlog_expire_logs_seconds = 864000
 max_binlog_size         = 100M
